// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RhsmHelpers billingMetrics should return parsed API responses in a consumable metric format, basic 1`] = `{}`;

exports[`RhsmHelpers billingMetrics should return parsed API responses in a consumable metric format, multiple unique providers, multiple accounts 1`] = `
{
  "dolorApi": {
    "accounts": [],
    "firstProvider": undefined,
    "firstProviderAccount": undefined,
    "firstProviderNumberAccounts": undefined,
    "hasUniqueAccounts": false,
    "hasUniqueProviders": false,
    "numberProviders": 0,
    "providers": [],
    "uniqueAccountsProvidersList": [],
  },
  "loremApi": {
    "accounts": [
      {
        "id": "123",
        "provider": "ipsum",
        "type": "loremApi",
      },
      {
        "id": "456",
        "provider": "lorem",
        "type": "loremApi",
      },
      {
        "id": "012",
        "provider": "dolor",
        "type": "loremApi",
      },
    ],
    "firstProvider": "ipsum",
    "firstProviderAccount": "123",
    "firstProviderNumberAccounts": 1,
    "hasUniqueAccounts": true,
    "hasUniqueProviders": true,
    "numberProviders": 3,
    "providers": [
      {
        "id": "123",
        "provider": "ipsum",
        "type": "loremApi",
      },
      {
        "id": "012",
        "provider": "dolor",
        "type": "loremApi",
      },
    ],
    "uniqueAccountsProvidersList": [
      [
        "ipsum",
        "123",
      ],
      [
        "lorem",
        "456",
      ],
      [
        "dolor",
        "012",
      ],
    ],
  },
}
`;

exports[`RhsmHelpers billingMetrics should return parsed API responses in a consumable metric format, single provider, multiple accounts 1`] = `
{
  "dolorApi": {
    "accounts": [],
    "firstProvider": undefined,
    "firstProviderAccount": undefined,
    "firstProviderNumberAccounts": undefined,
    "hasUniqueAccounts": false,
    "hasUniqueProviders": false,
    "numberProviders": 0,
    "providers": [],
    "uniqueAccountsProvidersList": [],
  },
  "loremApi": {
    "accounts": [
      {
        "id": "123",
        "provider": "lorem",
        "type": "loremApi",
      },
      {
        "id": "456",
        "provider": "lorem",
        "type": "loremApi",
      },
      {
        "id": "012",
        "provider": "lorem",
        "type": "loremApi",
      },
    ],
    "firstProvider": "lorem",
    "firstProviderAccount": "123",
    "firstProviderNumberAccounts": 3,
    "hasUniqueAccounts": true,
    "hasUniqueProviders": false,
    "numberProviders": 1,
    "providers": [],
    "uniqueAccountsProvidersList": [
      [
        "lorem",
        "123",
      ],
      [
        "lorem",
        "456",
      ],
      [
        "lorem",
        "012",
      ],
    ],
  },
}
`;

exports[`RhsmHelpers billingMetrics should return parsed API responses in a consumable metric format, single provider, single account 1`] = `
{
  "dolorApi": {
    "accounts": [],
    "firstProvider": undefined,
    "firstProviderAccount": undefined,
    "firstProviderNumberAccounts": undefined,
    "hasUniqueAccounts": false,
    "hasUniqueProviders": false,
    "numberProviders": 0,
    "providers": [],
    "uniqueAccountsProvidersList": [],
  },
  "loremApi": {
    "accounts": [
      {
        "id": "123",
        "provider": "lorem",
        "type": "loremApi",
      },
    ],
    "firstProvider": "lorem",
    "firstProviderAccount": "123",
    "firstProviderNumberAccounts": 1,
    "hasUniqueAccounts": true,
    "hasUniqueProviders": false,
    "numberProviders": 1,
    "providers": [],
    "uniqueAccountsProvidersList": [
      [
        "lorem",
        "123",
      ],
    ],
  },
}
`;

exports[`RhsmHelpers billingMetrics should return parsed API responses in a consumable metric format, single unique provider, multiple accounts 1`] = `
{
  "dolorApi": {
    "accounts": [],
    "firstProvider": undefined,
    "firstProviderAccount": undefined,
    "firstProviderNumberAccounts": undefined,
    "hasUniqueAccounts": false,
    "hasUniqueProviders": false,
    "numberProviders": 0,
    "providers": [],
    "uniqueAccountsProvidersList": [],
  },
  "loremApi": {
    "accounts": [
      {
        "id": "123",
        "provider": "lorem",
        "type": "loremApi",
      },
      {
        "id": "456",
        "provider": "lorem",
        "type": "loremApi",
      },
      {
        "id": "012",
        "provider": "lorem",
        "type": "loremApi",
      },
    ],
    "firstProvider": "lorem",
    "firstProviderAccount": "123",
    "firstProviderNumberAccounts": 3,
    "hasUniqueAccounts": true,
    "hasUniqueProviders": true,
    "numberProviders": 1,
    "providers": [
      {
        "id": "123",
        "provider": "lorem",
        "type": "loremApi",
      },
      {
        "id": "456",
        "provider": "lorem",
        "type": "loremApi",
      },
      {
        "id": "012",
        "provider": "lorem",
        "type": "loremApi",
      },
    ],
    "uniqueAccountsProvidersList": [
      [
        "lorem",
        "123",
      ],
      [
        "lorem",
        "456",
      ],
      [
        "lorem",
        "012",
      ],
    ],
  },
}
`;

exports[`RhsmHelpers billingMetrics should return parsed API responses in a consumable metric format, single unique provider, single account 1`] = `
{
  "dolorApi": {
    "accounts": [],
    "firstProvider": undefined,
    "firstProviderAccount": undefined,
    "firstProviderNumberAccounts": undefined,
    "hasUniqueAccounts": false,
    "hasUniqueProviders": false,
    "numberProviders": 0,
    "providers": [],
    "uniqueAccountsProvidersList": [],
  },
  "loremApi": {
    "accounts": [
      {
        "id": "123",
        "provider": "lorem",
        "type": "loremApi",
      },
    ],
    "firstProvider": "lorem",
    "firstProviderAccount": "123",
    "firstProviderNumberAccounts": 1,
    "hasUniqueAccounts": true,
    "hasUniqueProviders": true,
    "numberProviders": 1,
    "providers": [
      {
        "id": "123",
        "provider": "lorem",
        "type": "loremApi",
      },
    ],
    "uniqueAccountsProvidersList": [
      [
        "lorem",
        "123",
      ],
    ],
  },
}
`;

exports[`RhsmHelpers should have specific functions: rhsmHelpers 1`] = `
{
  "billingMetrics": [Function],
}
`;
